Reset unpack buffer in FeatureInfo if PBOs are supported by the driver

We need to reset GL_PIXEL_UNPACK_BUFFER in FeatureInfo initialization if it is
non-0. We should always do that regardless of whether or not the current decoder
exposes them, because with shared contexts it is possible that another decoder
uses ES3 whereas the current one doesn't.

Bug: 905519
Change-Id: I2c2f457fcdd76ca4812ac8d71c8f77d694506a57
Reviewed-on: https://chromium-review.googlesource.com/c/1340973
Commit-Queue: Antoine Labour <piman@chromium.org>
Commit-Queue: Zhenyao Mo <zmo@chromium.org>
Reviewed-by: Zhenyao Mo <zmo@chromium.org>
Reviewed-by: Kenneth Russell <kbr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#609050}
Former-commit-id: ae9d975aa70128c5fce24c912ae2c213eeca6e9b